# austin-chalk-faults

./: EDA Austin chalk.ipynb  Fault impact-Karnes-lightgbm-nolength.ipynb  Fault impact-Karnes.ipynb  README.md  pyproject.toml
src/acfaults/: import_pandas.py  pandasfuncs.py  surveys.py
