[project]
name = "austin-chalk-faults"
version = "0.1.0"
description = "Analysis of the effect of faults on production in the Austin chalk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=2.0.2",
    "cartopy>=0.24.1",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "lightgbm>=4.5.0",
    "llvmlite>=0.43.0",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "pandas>=2.0.3",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "shapash>=2.5.0",
    "shapely>=2.0.6",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
